base-pkg/main/default/objects/Account/fields/CVV__c.field-meta.xml
<CustomField>
    <fullName>CVV__c</fullName>
    <label>CVV</label>
    <length>4</length>
    <type>Text</type>
</CustomField>