base-pkg/main/default/objects/Account/fields/Restricted__c.field-meta.xml
<CustomField>
    <fullName>Restricted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Utility Account for use in PlantPeople Experience account (Deleted account user or initial signup user)</description>
    <label>Restricted</label>
    <type>Checkbox</type>
</CustomField>