base-pkg/main/default/objects/Account/validationRules/Billing_Zipcode_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Zipcode_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Billing_Zipcode__c, &quot;^[0-9]*$&quot;))</errorConditionFormula>
    <errorDisplayField>Billing_Zipcode__c</errorDisplayField>
    <errorMessage>Please enter a valid zipcode</errorMessage>
</ValidationRule>