base-pkg/main/default/objects/Account/validationRules/Card_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Card_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Card_Number__c, &quot;^[0-9]{16}$&quot;))</errorConditionFormula>
    <errorDisplayField>Card_Number__c</errorDisplayField>
    <errorMessage>Please enter a valid card number</errorMessage>
</ValidationRule>