base-pkg/main/default/objects/Account/validationRules/CVV_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>CVV_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(CVV__c, &quot;^[0-9]{3,4}$&quot;))</errorConditionFormula>
    <errorDisplayField>CVV__c</errorDisplayField>
    <errorMessage>Please enter a valid CVV</errorMessage>
</ValidationRule>