base-pkg/main/default/objects/Account/validationRules/Exp_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Exp_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(exp__c, &quot;^((0[1-9]|1[012])/([123]0|[012][1-9]|31))$&quot;))</errorConditionFormula>
    <errorDisplayField>exp__c</errorDisplayField>
    <errorMessage>Please enter a valid exp date</errorMessage>
</ValidationRule>