base-pkg/main/default/objects/Account/validationRules/Shipping_Zipcode_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Shipping_Zipcode_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Shipping_Zipcode__c, &quot;^[0-9]*$&quot;))</errorConditionFormula>
    <errorDisplayField>Shipping_Zipcode__c</errorDisplayField>
    <errorMessage>Please enter a valid zipcode</errorMessage>
</ValidationRule>